# parse_real_estate

./: .gitignore  Dockerfile  README.md  docker-compose.yml  make_dump.sh  pyproject.toml  send_dump_to_telegram.py
parse_app/: convert_date.py  database.py  main.py  pull_data.py  settings.py  telegram_send.py
