[tool.poetry]
name = "parse-app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "parse_app"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
psycopg2-binary = "^2.9.3"
SQLAlchemy = "^1.4.41"
SQLAlchemy-Utils = "^0.38.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


